--- a/source/dotnet/AdaptiveCards.Renderers.WPF.Extended/AdaptiveCards.Renderers.WPF.Extended.csproj
+++ b/source/dotnet/AdaptiveCards.Renderers.WPF.Extended/AdaptiveCards.Renderers.WPF.Extended.csproj
@@ -31,12 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AdaptiveCards.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AdaptiveCards.Model.0.9.0\lib\netstandard1.4\AdaptiveCards.Model.dll</HintPath>
-    </Reference>
-    <Reference Include="AdaptiveCards.Renderers.WPF, Version=0.9.0.37144, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AdaptiveCards.Renderers.WPF.0.9.0.37144-alpha\lib\net461\AdaptiveCards.Renderers.WPF.dll</HintPath>
-    </Reference>
     <Reference Include="MarkedNet, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MarkedNet.1.0.5.0\lib\portable-net45+win+wpa81\MarkedNet.dll</HintPath>
     </Reference>
@@ -141,6 +135,16 @@
     <None Include="createpackage.cmd" />
     <None Include="packages.config" />
     <None Include="pushpackage.cmd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AdaptiveCards.Model\AdaptiveCards.Model.csproj">
+      <Project>{359961bf-84cd-4e33-a86d-9ed708729e07}</Project>
+      <Name>AdaptiveCards.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AdaptiveCards.Renderers.Wpf\AdaptiveCards.Renderers.WPF.csproj">
+      <Project>{60619d62-59fa-4864-ba5b-6f6f87997671}</Project>
+      <Name>AdaptiveCards.Renderers.WPF</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
