getting xamarin going

--- a/source/dotnet/AdaptiveCards.Renderers.XamarinForms/AdaptiveCards.Renderers.XamarinForms.csproj
+++ b/source/dotnet/AdaptiveCards.Renderers.XamarinForms/AdaptiveCards.Renderers.XamarinForms.csproj
@@ -4,7 +4,41 @@
     <TargetFramework>netstandard1.4</TargetFramework>
     <PackageTargetFallback>$(PackageTargetFallback);portable-win+net45+wp8+win81+wpa8</PackageTargetFallback>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wpa81</PackageTargetFallback>
+    <RootNamespace>AdaptiveCards.Renderers</RootNamespace>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD1_4;Xamarin</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Actions\ActionBase.Xaml.cs" Link="Actions\ActionBase.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Actions\ActionHttp.Xaml.cs" Link="Actions\ActionHttp.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Actions\ActionOpenUrl.Xaml.cs" Link="Actions\ActionOpenUrl.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Actions\ActionShowCard.Xaml.cs" Link="Actions\ActionShowCard.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Actions\ActionSubmit.Xaml.cs" Link="Actions\ActionSubmit.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Containers\AdaptiveCard.Xaml.cs" Link="Containers\AdaptiveCard.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Containers\Column.Xaml.cs" Link="Containers\Column.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Containers\ColumnSet.Xaml.cs" Link="Containers\ColumnSet.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Containers\Container.Xaml.cs" Link="Containers\Container.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Containers\FactSet.Xaml.cs" Link="Containers\FactSet.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Containers\ImageSet.Xaml.cs" Link="Containers\ImageSet.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\CardElement.Xaml.cs" Link="Elements\CardElement.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\Image.Xaml.cs" Link="Elements\Image.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\Input.Xaml.cs" Link="Elements\Input.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\InputChoiceSet.Xaml.cs" Link="Elements\InputChoiceSet.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\InputDate.Xaml.cs" Link="Elements\InputDate.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\InputNumber.Xaml.cs" Link="Elements\InputNumber.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\InputText.Xaml.cs" Link="Elements\InputText.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\InputTime.Xaml.cs" Link="Elements\InputTime.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\InputToggle.Xaml.cs" Link="Elements\InputToggle.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Elements\TextBlock.Xaml.cs" Link="Elements\TextBlock.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\MarkedXamlRenderer.cs" Link="MarkedXamlRenderer.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\RenderContext.cs" Link="RenderContext.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\TypedElement.Xaml.cs" Link="TypedElement.Xaml.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\Utilities.cs" Link="Utilities.cs" />
+    <Compile Include="..\AdaptiveCards.Renderers.WPF\XamlRenderer.cs" Link="XamlRenderer.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MarkedNet" Version="1.0.5" />
@@ -14,6 +48,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AdaptiveCards.Model\AdaptiveCards.Model.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Actions\" />
+    <Folder Include="Containers\" />
+    <Folder Include="Elements\" />
   </ItemGroup>
 
 </Project>
