--- a/source/dotnet/AdaptiveCards.Renderers.WPF/AdaptiveCards.Renderers.WPF.csproj
+++ b/source/dotnet/AdaptiveCards.Renderers.WPF/AdaptiveCards.Renderers.WPF.csproj
@@ -49,6 +49,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AdaptiveCards.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AdaptiveCards.Model.0.9.0\lib\netstandard1.4\AdaptiveCards.Model.dll</HintPath>
+    </Reference>
     <Reference Include="MarkedNet, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MarkedNet.1.0.5.0\lib\portable-net45+win+wpa81\MarkedNet.dll</HintPath>
     </Reference>
@@ -177,12 +180,6 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="pushpackage.cmd" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AdaptiveCards.Model\AdaptiveCards.Model.csproj">
-      <Project>{359961bf-84cd-4e33-a86d-9ed708729e07}</Project>
-      <Name>AdaptiveCards.Model</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
