--- a/source/dotnet/AdaptiveCards.BotClient.XamarinForms/AdaptiveCards.BotClient.XamarinForms.UWP/project.json
+++ b/source/dotnet/AdaptiveCards.BotClient.XamarinForms/AdaptiveCards.BotClient.XamarinForms.UWP/project.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.1",
     "Microsoft.Rest.ClientRuntime": "2.3.5",
-    "Xamarin.Forms": "2.3.3.193"
+    "Newtonsoft.Json": "9.0.1",
+    "Xamarin.Forms": "2.3.4.221-pre6"
   },
   "frameworks": {
     "uap10.0": {}
