--- a/source/dotnet/AdaptiveCards.WPF/packages.config
+++ b/source/dotnet/AdaptiveCards.WPF/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdaptiveCards" version="1.0.0.2" targetFramework="net461" />
   <package id="MarkedNet" version="1.0.5.0" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
