--- a/source/dotnet/AdaptiveCards.XamarinForms/AdaptiveCards.XamarinForms.csproj
+++ b/source/dotnet/AdaptiveCards.XamarinForms/AdaptiveCards.XamarinForms.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AdaptiveCards" Version="1.0.0.2" />
     <PackageReference Include="MarkedNet" Version="1.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="2.3.4.221-pre6" />
