--- a/source/dotnet/AdaptiveCards/AdaptiveCards.csproj
+++ b/source/dotnet/AdaptiveCards/AdaptiveCards.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
-    <PackageId>AdaptiveCards.Model</PackageId>
-    <PackageVersion>0.9.0.0</PackageVersion>
+    <PackageId>AdaptiveCards</PackageId>
+    <PackageVersion>1.0.0.2</PackageVersion>
     <Authors>Microsoft</Authors>
     <summary>Adaptive Card object model for .NET</summary>
-    <Description>This library implements classes for building and serializing adaptive card objects</Description>
+    <Description>This .NET Standard library implements classes for building and serializing adaptive card objects</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>First release</PackageReleaseNotes>
     <PackageTags>adaptivecards</PackageTags>
