--- a/source/dotnet/AdaptiveCards.Html/AdaptiveCards.Html.csproj
+++ b/source/dotnet/AdaptiveCards.Html/AdaptiveCards.Html.csproj
@@ -31,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AdaptiveCards, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AdaptiveCards.1.0.0.2\lib\netstandard1.3\AdaptiveCards.dll</HintPath>
-    </Reference>
     <Reference Include="HtmlTags, Version=4.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlTags.4.2.0\lib\net45\HtmlTags.dll</HintPath>
     </Reference>
@@ -117,6 +114,12 @@
     <None Include="createpackage.cmd" />
     <None Include="packages.config" />
     <None Include="pushpackage.cmd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AdaptiveCards\AdaptiveCards.csproj">
+      <Project>{359961bf-84cd-4e33-a86d-9ed708729e07}</Project>
+      <Name>AdaptiveCards</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
