--- a/source/dotnet/AdaptiveCards.Html/AdaptiveCards.Html.nuspec
+++ b/source/dotnet/AdaptiveCards.Html/AdaptiveCards.Html.nuspec
@@ -13,6 +13,7 @@
       <dependency id="AdaptiveCards" version="1.0.0.4" />
       <dependency id="HtmlTags" version="4.2.0" />
       <dependency id="MarkedNet" version="1.0.5.0" />
+      <dependency id="Newtonsoft.Json" version="9.0.1" />
     </dependencies>
   </metadata>
 </package>
