--- a/source/dotnet/AdaptiveCards.Html/AdaptiveCards.Html.csproj
+++ b/source/dotnet/AdaptiveCards.Html/AdaptiveCards.Html.csproj
@@ -121,5 +121,8 @@
       <Name>AdaptiveCards</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AdaptiveCard.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
