--- a/source/dotnet/AdaptiveCards.XamarinForms/AdaptiveCards.XamarinForms.csproj
+++ b/source/dotnet/AdaptiveCards.XamarinForms/AdaptiveCards.XamarinForms.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;DEBUG;NETSTANDARD1_4;Xamarin</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD1_4;XAMARIN;NETSTANDARD1_3</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
