remove baseUrl from tsconfig

--- a/source/html/visualizer/tsconfig.json
+++ b/source/html/visualizer/tsconfig.json
@@ -9,8 +9,7 @@
         "sourceMap": true,
         "target": "es5",
         "allowJs": true,
-        "outDir": "built",
-        "baseUrl": "."
+        "outDir": "built"
     },
     "include": [
         "src/**/*"
