add types to package.json

--- a/source/html/renderer/package.json
+++ b/source/html/renderer/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.3",
   "description": "Adaptive Card toolkit for javascript",
   "main": "built/adaptive-cards.js",
+  "types": "built/adaptive-cards.d.ts",
   "private": true,
   "scripts": {
     "build-dist": "webpack",
