--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="dll\dll.cpp" />
     <ClCompile Include="lib\AdaptiveFact.cpp" />
     <ClCompile Include="lib\AdaptiveFactSet.cpp" />
+    <ClCompile Include="lib\AdaptiveImageSet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lib\AdaptiveCard.h" />
@@ -37,6 +38,7 @@
     <ClInclude Include="lib\XamlStyleKeyGenerators.h" />
     <ClInclude Include="lib\AdaptiveFactSet.h" />
     <ClInclude Include="lib\AdaptiveFact.h" />
+    <ClInclude Include="lib\AdaptiveImageSet.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.XamlCardRenderer.idl" />
